Java sources and pom.xml files reformatted.